@@ -1,7 +1,7 @@
 /** \file client.cpp
  * Snowballs main file
  *
- * $Id: client.cpp,v 1.57 2002/10/25 16:52:15 lecroart Exp $
+ * $Id: client.cpp,v 1.58 2002/11/05 09:47:36 lecroart Exp $
  */
 
 /* Copyright, 2001 Nevrax Ltd.
@@ -65,7 +65,6 @@
 #include <nel/3d/u_text_context.h>
 #include <nel/3d/u_material.h>
 #include <nel/3d/u_texture.h>
-#include <nel/3d/u_cloud_scape.h>
 
 #include <nel/net/login_client.h>
 
@@ -294,6 +293,10 @@ int main(int argc, char **argv)
 	displayLoadingState ("Initialize LensFlare");
 	initLensFlare ();
 
+	// Init the sky
+	displayLoadingState ("Initialize Sky");
+	initSky ();
+
 	// Creates the self entity
 	displayLoadingState ("Adding your entity");
 	srand (time(NULL));
@@ -324,23 +327,12 @@ int main(int argc, char **argv)
 	nlinfo ("");
 	nlinfo ("Press SHIFT-ESC to exit the game");
 
-
-	SCloudScapeSetup css;
-	UCloudScape *clouds = Scene->createCloudScape ();
-	clouds->init (&css);
-	clouds->setQuality (160);
-	clouds->setNbCloudToUpdateIn80ms (1);
-
-
-
 	// Get the current time
 	NewTime = CTime::getLocalTime();
 
 	while ((!NeedExit) && Driver->isActive())
 	{
-		// Update the login request interface
-		
-		clouds->anim (NewTime-LastTime);
+		animateSky (NewTime-LastTime);
 
 		// Clear all buffers
 		Driver->clearBuffers (CRGBA (0, 0, 0));
@@ -372,8 +364,6 @@ int main(int argc, char **argv)
 
 		// Render the sky scene before the main scene
 		updateSky ();
-
-		clouds->render ();
 
 		// Render
 		Scene->render ();
