@@ -1,8 +1,14 @@
 
+October 25 2002
+===============
+
+* Added the new clouds system
+
+
 October 22 2002
 ===============
 
-* Use the new login system with nel_launcher
+* Added the new login system with nel_launcher
 
 
 October 10 2002
